<resources>
    <string name="app_name">Glance</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_activity_timeline">Timeline</string>

    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="india">INDIA</string>
    <string name="world">WORLD</string>
    <string name="simplified">true</string>
    <string name="science">SCIENCE_TECH</string>
    <string name="entertainment">ENTERTAINMENT</string>
    <string name="business">BUSINESS</string>
    <string name="sports">SPORTS</string>

    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="updatnwow"><b>UPDATE NOW</b></string>
    <string name="maybelater"><b>MAYBE LATER</b></string>
    <string name="updatedailogtitle">Hello,</string>
    <string name="satifytitle">Hi there,</string>
    <string name="satifyNO">NO</string>
    <string name="satifyyes">YES</string>
    <string name="satisfydescription">Are you satisfied with the overall experience of the news app?</string>
    <string name="rateustitle">Thanks !</string>
    <string name="rateusdescription">Would you care to rate us on Play store?</string>
    <string name="reateusyes">YES, TAKE ME THERE</string>
    <string name="submittitle">Sorry for the inconvinience.</string>
    <string name="submitdescription">Please tell us how we can improve the app?</string>
    <string name="submitsend">Send</string>
    <string name="trends"><b>TRENDS</b></string>
    <string name="news"><b>NEWS</b></string>
    <string name="appid" type="id">2c7e3f4eea2daa56771138fb60a369cb</string>
    <string name="url">http://res.cloudinary.com/innox-technologies/image/upload/</string>
    <string name="interneterror">No Internet.</string>
    <string name="apiurl">http://api.glanceapp.in:80</string>

</resources>
