<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#FaFaFa"
    android:padding="20dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/satifytitle"
            android:textColor="@color/dailogtitle"
            android:id="@+id/satisfytitle"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:text="@string/satisfydescription"
            android:textColor="@color/description"
            android:layout_below="@+id/satisfytitle"
            android:id="@+id/satisfydescription"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satifyyes"
            android:textSize="14sp"
            android:id="@+id/yes"
            android:textColor="@color/updatenow"
            android:paddingTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_below="@+id/satisfydescription"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satifyNO"
            android:textSize="14sp"
            android:layout_marginLeft="25dp"
            android:textColor="@color/dailogtitle"
            android:paddingTop="20dp"
            android:id="@+id/no"
            android:layout_below="@+id/satisfydescription"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</RelativeLayout>