<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#FaFaFa"
    android:padding="20dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submittitle"
            android:textColor="@color/dailogtitle"
            android:id="@+id/submittitle"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:text="@string/submitdescription"
            android:textColor="@color/description"
            android:layout_below="@+id/submittitle"
            android:id="@+id/submitdes"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitsend"
            android:textSize="14sp"
            android:id="@+id/submitfeedback"
            android:textColor="@color/updatenow"
            android:paddingTop="20dp"
            android:layout_below="@+id/feed"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/dailogtitle"
            android:paddingTop="20dp"
            android:id="@+id/feed"
            android:layout_below="@+id/submitdes"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</RelativeLayout>